First cut, catalog leader election.
Change-Id: I5d4703952f18c357b1966b7dab0153bc9ffd290f

--- a/be/src/catalog/CMakeLists.txt
+++ b/be/src/catalog/CMakeLists.txt
@@ -23,7 +23,7 @@ add_library(Catalog
   catalog-server.cc
   catalog-util.cc
   catalogd-main.cc
-)
+  leader-election-mgr.cc)
 add_dependencies(Catalog gen-deps)
 
 add_library(CatalogTests STATIC
